2003-02-13  Per Bothner  <per@bothner.com>

	* BaseUri.java:  New class, extends Procedure1.
	* Makefile.am (java_sources):  Add BaseUri.java.

2003-01-09  Per Bothner  <per@bothner.com>

	* Average.java:  Update for gnu.lists changes.
	* BooleanValue.java:  Likewise.
	* Children.java:  Likewise.
	* Compare.java:  Likewise.
	* Reduce.java:  Likewise.
	* StringValue.java:  Likewise.
	* SubList.java:  Likewise.
	* ValuesFilter.java:  Likewise.

2002-11-16  Per Bothner  <per@bothner.com>

	* MakeAttribute.java, MakeElement.java:  Use gnu.mapping.Symbol
	instead of gnu.xml.QName.

2002-08-18  Per Bothner  <per@bothner.com>

	* MakeAttribute.java (beginAttribute):  Swap argument order, for
	consistency with compile and also MakeElement's beginGroup.
	(apply):  Fix beginAttribute call to match.

2002-07-21  Per Bothner  <per@bothner.com>

	* Compare.java, MakeElement.java (inline):  Update to take
	extra ExpWalker parameter.

2002-07-02  Per Bothner  <per@bothner.com>

	* Compare.java (apply):  Mistaken assumption - String.compareTo does
	not necessarily return -1, 0, or 1.

	* IndexOf.java:  New class, extends Procedure2.
	* LastIndexOf.java:  New class, extends Procedure2.
	* Makefile.am (java_sources):  add new files.

2002-05-06  Per Bothner  <per@bothner.com>

	* Compare.java:  Implement CanInline.

	* Focus.java.in:  Move to gnu.kawa.xml.
	* Makefile.am:  Update accordingly.
	* Position.java:  Now need to import Focus.
	* ValuesFilter.java:  Likewise.

2002-04-19  Per Bothner  <per@bothner.com>

	* Average.java:  New class, extends Procedure1.
	* Reduce.java:  New class, extends Procedure1.
	* Makefile.am (java_sources):  Update accordingly.
	* MinMax.java:  Change to inherit from Reduce.

2002-04-18  Per Bothner  <per@bothner.com>

	* BooleanValue.java:  New class, extends Procedure1.
	* Makefile.am (java_sources):  Add BooleanValue.java.

2002-04-08  Per Bothner  <per@bothner.com>

	* Children.java (children):  Use nextNodeIndex.
